# scone_cli_crate

./: .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs
