[package]
name = "scone_cli"
version = "1.0.0"
edition = "2024"
publish = false
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
handlebars = "*"
rand = ">=0.9.0"
shells = "*"
opg = "*"
#get_if_addrs = "0.5.3"
signpolicy = { git = "https://github.com/scontain/signpolicy.git", branch = "main" }
spawn_server = { git = "https://github.com/scontain/spawn_server.git", branch = "main" }
