[package]
name = "scone_cli"
version = "2.0.0"
edition = "2024"
publish = false
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
handlebars = "6.4.0"
shells = "0.2.0"
opg = "0.2.1"
signpolicy = { git = "https://github.com/scontain/signpolicy.git", rev = "2b41a1e7a247dfabf902b194a4bb798ae5e2c342" }
spawn_server = { git = "https://github.com/scontain/spawn_server.git", rev = "8b9677ba4eb345b0782abc3e0366c8366eee90ad" }
rand =  "0.9.2" 
